fix: compute history overflow

--- a/src/components/organisms/AssetContent/index.module.css
+++ b/src/components/organisms/AssetContent/index.module.css
@@ -5,6 +5,14 @@
   margin-top: -1rem;
 }
 
+.grid > div {
+  overflow: hidden;
+  /* add padding to see box-shadow with hidden overflow */
+  padding: var(--spacer);
+  /* set a negative margin to fix the spacing */
+  margin: calc(var(--spacer) * -1);
+}
+
 .grid {
   display: grid;
   gap: calc(var(--spacer) * 1.5);
@@ -30,9 +38,8 @@
   .grid {
     grid-template-columns: 1.5fr 1fr;
   }
-
   .actions {
-    margin-top: var(--spacer);
+    margin-top: 0 !important;
   }
 }
 
